tests/lean/have.lean
example : False :=
  have False := _
